# stm32f411e-disc

./: Cargo.toml  LICENSE-0BSD.txt  README.md  openocd-itm.gdb  openocd.cfg  openocd.gdb  openocd_program.sh
examples/: compass.rs  hello-world-itm.rs  hello-world-openocd.rs  itm-accelerometer.rs  itm-gyroscope.rs  itm-thermometer.rs  led-on-button-busyloop.rs  led-on-button-irq.rs  led-on-button-timer.rs  led-roulette.rs  light-all-leds.rs  loop-forever.rs  serial-echo.rs
src/: l3gd20.rs  led.rs  lib.rs  lsm303dlhc.rs  user_button.rs
