[package]
name = "stm32f411e-disc"
version = "0.1.0"
authors = ["Alexander Batischev <eual.jp@gmail.com>"]
edition = "2021"
categories = [
    "embedded",
    "no-std",
]
description = "Board support crate for the STM32F411E DISCOVERY microcontroller board"
keywords = [
    "arm",
    "cortex-m",
    "template",
    "bsp",
    "stm32",
    "stm32f411",
    "stm32f411e"
]
license = "0BSD"
repository = "https://github.com/Minoru/stm32f411e-disc"
readme = "README.md"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
lsm303dlhc = "0.2"
l3gd20 = "0.3"

[dependencies.stm32f4xx-hal]
features = ["rt", "stm32f411"]
version = "0.13"

[dev-dependencies]
panic-halt = "0.2"
cortex-m-semihosting = "0.5"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
codegen-units = 1
